--- a/src/main/webapp/WEB-INF/zul/crawler/web/index.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/index.zul
@@ -32,6 +32,7 @@
 			<tab id="tabCrawlerWebMapping" label="Field mapping"
 				visible="@load(webcrawler.webCrawlerParametersRights)" />
 			<tab id="tabCrawlerWebCookies" label="Cookies" />
+			<tab id="tabCrawlerWebHeaders" label="Headers" />
 			<tab id="tabCrawlerWebRobotsTxt" label="Robots.txt" />
 			<tab id="tabCrawlerWebSitemap" label="Site Map" />
 		</tabs>
@@ -72,6 +73,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerWebCookies.onSelect">
 				<include src="WEB-INF/zul/crawler/web/cookies.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebHeaders.onSelect">
+				<include src="WEB-INF/zul/crawler/web/headers.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerWebRobotsTxt.onSelect">
 				<include src="WEB-INF/zul/crawler/web/robotstxt.zul" />
