Implements #719 Conflicts: 	CHANGELOG.txt.gz

--- a/src/main/webapp/WEB-INF/zul/crawler/web/exclusion.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/exclusion.zul
@@ -70,4 +70,7 @@
 	</listbox>
 	<button label="delete" visible="@load(exclusion.selectionRemovable)"
 		onClick="@command('onDelete')" />
+	<button label="delete all"
+		visible="@load(exclusion.selectionRemovable)"
+		onClick="@command('onDeleteAll')" />
 </window>
