--- a/src/main/webapp/WEB-INF/zul/runtime/advanced/ocr.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/advanced/ocr.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -36,6 +36,13 @@
 			</cell>
 			<label
 				value="Enter the path to the Tesseract executable Eg.: /usr/local/bin/tesseract" />
+		</row>
+		<row>
+			<label value="HOCR file extension" />
+			<textbox cols="6"
+				value="@bind(advanced.ocrManager.hocrFileExtension)" />
+			<label
+				value="Version &lt;= 3.02 should be set to 'html', &gt;= 3.03 to 'hocr'" />
 		</row>
 		<row>
 			<label value="Tesseract default language" />
