--- a/src/main/webapp/WEB-INF/zul/renderer/edit_auth.zul
+++ b/src/main/webapp/WEB-INF/zul/renderer/edit_auth.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -56,38 +56,6 @@
 						value="@bind(renderer.currentRenderer.authPassword)" cols="20" />
 					<label
 						value="Enter the password to use when connecting to the authentication server" />
-				</row>
-				<row>
-					<label value="User allow field: " />
-					<combobox model="@load(renderer.indexedFieldList)"
-						cols="30"
-						value="@bind(renderer.currentRenderer.authUserAllowField)" />
-					<label
-						value="The field of the schema containing list of allowed users" />
-				</row>
-				<row>
-					<label value="User deny field: " />
-					<combobox model="@load(renderer.indexedFieldList)"
-						cols="30"
-						value="@bind(renderer.currentRenderer.authUserDenyField)" />
-					<label
-						value="The field of the schema containing list of not allowed users" />
-				</row>
-				<row>
-					<label value="Group allow field: " />
-					<combobox model="@load(renderer.indexedFieldList)"
-						cols="30"
-						value="@bind(renderer.currentRenderer.authGroupAllowField)" />
-					<label
-						value="The field of the schema containing list of allowed groups" />
-				</row>
-				<row>
-					<label value="Group deny field: " />
-					<combobox model="@load(renderer.indexedFieldList)"
-						cols="30"
-						value="@bind(renderer.currentRenderer.authGroupDenyField)" />
-					<label
-						value="The field of the schema containing list of not allowed groups" />
 				</row>
 			</rows>
 		</grid>
