Implements #955 - New API /action?action=close - New Close button Conflicts: 	src/main/java/com/jaeksoft/searchlib/ClientCatalog.java 	src/main/java/com/jaeksoft/searchlib/web/ActionServlet.java 	src/main/java/com/jaeksoft/searchlib/web/controller/runtime/CommandsController.java 	src/main/webapp/WEB-INF/zul/runtime/commands.zul

--- a/src/main/webapp/WEB-INF/zul/runtime/commands.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/commands.zul
@@ -55,6 +55,12 @@
 				</cell>
 			</row>
 			<row>
+				<label value="Close: " />
+				<button label="Close" onClick="@command('onClose')" />
+				<label />
+				<label />
+			</row>
+			<row>
 				<label value="Truncate: " />
 				<button label="Delete all"
 					onClick="@command('onDeleteAll')" />
