Implements #955 - New API /action?action=close - New Close button

--- a/src/main/webapp/WEB-INF/zul/runtime/commands.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/commands.zul
@@ -57,6 +57,13 @@
 				</cell>
 			</row>
 			<row>
+				<label value="Close: " />
+				<button label="Close" onClick="@command('onClose')"
+					disabled="@load(commands.offline)" />
+				<label />
+				<label />
+			</row>
+			<row>
 				<label value="Offline/Online: " />
 				<cell>
 					<button label="Offline"
