--- a/src/main/webapp/WEB-INF/zul/crawler/database/crawl_list.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/database/crawl_list.zul
@@ -14,65 +14,93 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<panel
-	title="List of existing database crawl - click on an crawl name to edit it"
-	border="normal" visible="@load(dbCrawlList.notEditing)">
-	<toolbar>
-		<button label="New crawl..." onClick="@command('onNew')" />
-	</toolbar>
-	<panelchildren>
-		<listbox model="@load(dbCrawlList.databaseCrawlList.array)"
-			mold="paging" pageSize="20" onSelect="@command('reload')">
-			<listhead>
-				<listheader label="Name" hflex="min" />
-				<listheader label="Last execution time" hflex="min" />
-				<listheader label="Duration"
-					tooltiptext="last duration time" hflex="min" />
-				<listheader label="Status" hflex="min" />
-				<listheader label="Info" />
-				<listheader label="Action" hflex="min" align="center" />
-			</listhead>
-			<template name="model" var="dbcrawlitem">
-				<listitem>
-					<listcell label="@load(dbcrawlitem.name)" />
-					<listcell
-						label="@load(dbcrawlitem.lastThread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
-					<listcell
-						label="@load(dbcrawlitem.lastThread.duration) @converter('com.jaeksoft.searchlib.web.converter.DurationConverter')" />
-					<listcell
-						tooltiptext="@load(dbcrawlitem.lastThread.info)"
-						label="@load(dbcrawlitem.lastThread.status.name)" />
-					<listcell
-						label="@load(dbcrawlitem.lastThread.countInfo)" />
-					<listcell>
-						<hbox align="center">
-							<button
-								tooltiptext="Edit the database crawl" label="Edit"
-								onClick="@command('edit', crawlitem=dbcrawlitem)" />
-							<space />
-							<button
-								tooltiptext="Clone the database crawl" label="Clone"
-								onClick="@command('clone', crawlitem=dbcrawlitem)" />
-							<space />
-							<button
-								tooltiptext="Execute the crawl process"
-								disabled="@load(dbcrawlitem.thread)"
-								image="/images/action_check.png"
-								onClick="@command('execute', crawlitem=dbcrawlitem)" />
-							<space />
-							<button
-								tooltiptext="Abort the crawl process"
-								disabled="@load(!dbcrawlitem.thread)"
-								image="/images/action_cancel.png"
-								onClick="@command('abort', crawlitem=dbcrawlitem)" />
-							<space />
-							<button tooltiptext="Delete crawl process"
-								image="/images/action_delete.png"
-								onClick="@command('delete', crawlitem=dbcrawlitem)" />
-						</hbox>
-					</listcell>
-				</listitem>
-			</template>
-		</listbox>
-	</panelchildren>
-</panel>
+<zk>
+	<panel
+		title="List of existing database crawl - click on an crawl name to edit it"
+		border="normal" visible="@load(dbCrawlList.notEditing)">
+		<toolbar>
+			<button label="New crawl..." onClick="@command('onNew')" />
+		</toolbar>
+		<panelchildren>
+			<listbox model="@load(dbCrawlList.databaseCrawlList.array)"
+				mold="paging" pageSize="20" onSelect="@command('reload')">
+				<listhead>
+					<listheader label="Name" hflex="min" />
+					<listheader label="Last execution time" hflex="min" />
+					<listheader label="Duration"
+						tooltiptext="last duration time" hflex="min" />
+					<listheader label="Status" hflex="min" />
+					<listheader label="Info" />
+					<listheader label="Action" hflex="min"
+						align="center" />
+				</listhead>
+				<template name="model" var="dbcrawlitem">
+					<listitem>
+						<listcell label="@load(dbcrawlitem.name)" />
+						<listcell
+							label="@load(dbcrawlitem.lastThread.startTime) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+						<listcell
+							label="@load(dbcrawlitem.lastThread.duration) @converter('com.jaeksoft.searchlib.web.converter.DurationConverter')" />
+						<listcell
+							tooltiptext="@load(dbcrawlitem.lastThread.info)"
+							label="@load(dbcrawlitem.lastThread.status.name)" />
+						<listcell
+							label="@load(dbcrawlitem.lastThread.countInfo)" />
+						<listcell>
+							<hbox align="center">
+								<button
+									tooltiptext="Edit the database crawl" label="Edit"
+									onClick="@command('edit', crawlitem=dbcrawlitem)" />
+								<space />
+								<button
+									tooltiptext="Clone the database crawl" label="Clone"
+									onClick="@command('clone', crawlitem=dbcrawlitem)" />
+								<space />
+								<button
+									tooltiptext="Execute the crawl process"
+									disabled="@load(dbcrawlitem.thread)"
+									image="/images/action_check.png"
+									onClick="@command('execute', crawlitem=dbcrawlitem)" />
+								<space />
+								<button
+									tooltiptext="Abort the crawl process"
+									disabled="@load(!dbcrawlitem.thread)"
+									image="/images/action_cancel.png"
+									onClick="@command('abort', crawlitem=dbcrawlitem)" />
+								<space />
+								<button
+									tooltiptext="Delete crawl process"
+									image="/images/action_delete.png"
+									onClick="@command('delete', crawlitem=dbcrawlitem)" />
+							</hbox>
+						</listcell>
+					</listitem>
+				</template>
+			</listbox>
+		</panelchildren>
+	</panel>
+	<separator />
+	<panel title="Default database credential" border="normal"
+		visible="@load(dbCrawlList.notEditing)">
+		<panelchildren>
+			<grid>
+				<columns>
+					<column align="right" />
+					<column />
+				</columns>
+				<rows>
+					<row>
+						<label value="Default login" />
+						<textbox
+							value="@bind(dbCrawlList.properties.defaultLogin)" />
+					</row>
+					<row>
+						<label value="Default password" />
+						<textbox type="password"
+							value="@bind(dbCrawlList.properties.defaultPassword)" />
+					</row>
+				</rows>
+			</grid>
+		</panelchildren>
+	</panel>
+</zk>
