--- a/src/main/webapp/WEB-INF/zul/crawler/web/crawl.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/crawl.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -86,7 +86,10 @@
 						</template>
 					</listbox>
 				</hbox>
-				<cell colspan="3" />
+				<label value="Indexation buffer: " />
+				<intbox
+					value="@bind(crawlProcess.properties.indexDocumentBufferSize.value)" />
+				<cell />
 			</row>
 		</rows>
 	</grid>
